<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_dialog_tip">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/spacing_10"
            android:paddingBottom="@dimen/spacing_10"
            android:text="@string/common_tip"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/font_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/spacing_10"
            android:text="@string/task_detail_activity_save_task_tip"
            android:textColor="@color/grey_666666"
            android:textSize="@dimen/font_12"
            android:textStyle="bold" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/message"
            android:background="@color/grey_d8d8d8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_10"
                android:paddingBottom="@dimen/spacing_10"
                android:text="@string/task_detail_activity_not_save"
                android:textColor="@color/grey_999999"
                android:textSize="@dimen/font_14"
                android:textStyle="bold" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="@color/grey_d8d8d8" />

            <TextView
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="@dimen/spacing_10"
                android:paddingBottom="@dimen/spacing_10"
                android:text="@string/task_detail_activity_save"
                android:textColor="@color/orange_f9534b"
                android:textSize="@dimen/font_14"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>