<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.neufmer.ygfstore.ui.addtask.AddTaskViewModel" />

        <variable
            name="viewModel"
            type="AddTaskViewModel" />

    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:binding="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_ffffff"
        android:fitsSystemWindows="true"
        tools:context=".ui.login.activity.LoginActivity">

        <include
            android:id="@+id/add_task_include"
            layout="@layout/frame_toolbar"
            binding:toolbarViewModel="@{viewModel.toolbarViewModel}" />


        <LinearLayout
            android:id="@+id/ll_main_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_50"
                android:layout_marginStart="@dimen/spacing_20"
                android:layout_marginEnd="@dimen/spacing_20"
                android:background="@drawable/bg_edit_text_bottom_stroke"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/tv_check_member"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/check_member"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/et_check_member"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:layout_weight="3"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_choose_check_personnel"
                    android:maxLines="1"
                    android:paddingTop="@dimen/spacing_10"
                    android:text="@={viewModel.personnel}"
                    android:paddingBottom="@dimen/spacing_10"
                    android:singleLine="true"
                    android:textColor="@color/black_333333"
                    android:textColorHint="@color/grey_999999"
                    android:textSize="@dimen/font_14"
                    binding:onClickCommand="@{viewModel.showPersonnelDialogClick}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_20"
                android:layout_marginEnd="@dimen/spacing_20"
                android:background="@drawable/bg_edit_text_bottom_stroke">


                <TextView
                    android:id="@+id/tv_check_store"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingTop="@dimen/spacing_10"
                    android:paddingBottom="@dimen/spacing_10"
                    android:text="@string/check_store"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/et_check_store"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:layout_weight="3"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_choose_check_store"
                    android:paddingTop="@dimen/spacing_10"
                    android:paddingBottom="@dimen/spacing_10"
                    android:text="@{viewModel.stores}"
                    android:textColor="@color/black_333333"
                    android:textColorHint="@color/grey_999999"
                    android:textSize="@dimen/font_14"
                    binding:onClickCommand="@{viewModel.showOwnerDialogClick}" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_50"
                android:layout_marginStart="@dimen/spacing_20"
                android:layout_marginEnd="@dimen/spacing_20"
                android:background="@drawable/bg_edit_text_bottom_stroke"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/tv_check_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/check_time"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/et_check_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:layout_weight="3"
                    android:background="@null"
                    android:drawableEnd="@drawable/add_task_calendar"
                    android:drawablePadding="@dimen/spacing_16"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_choose_check_time"
                    android:paddingTop="@dimen/spacing_10"
                    android:paddingBottom="@dimen/spacing_10"
                    android:singleLine="true"
                    android:text="@{viewModel.selectedDate}"
                    android:textColor="@color/black_333333"
                    android:textColorHint="@color/grey_999999"
                    android:textSize="@dimen/font_14"
                    binding:onClickCommand="@{viewModel.showTimeDialogClick}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_50"
                android:layout_marginStart="@dimen/spacing_20"
                android:layout_marginEnd="@dimen/spacing_20"
                android:background="@drawable/bg_edit_text_bottom_stroke"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/tv_total_check_times"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/total_check"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/font_16" />

                <EditText
                    android:id="@+id/et_total_check_times"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:layout_weight="3"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_choose_check_count"
                    binding:textChanged="@{viewModel.textChanged}"
                    android:maxLines="1"
                    android:paddingTop="@dimen/spacing_10"
                    android:inputType="number"
                    android:paddingBottom="@dimen/spacing_10"
                    android:singleLine="true"
                    android:text="@={viewModel.count}"
                    android:textColor="@color/black_333333"
                    android:textColorHint="@color/grey_999999"
                    android:textSize="@dimen/font_14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_50"
                android:layout_marginStart="@dimen/spacing_20"
                android:layout_marginEnd="@dimen/spacing_20"
                android:background="@drawable/bg_edit_text_bottom_stroke"
                android:gravity="center_vertical">


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/check_surface"
                    android:textColor="@color/black_333333"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/spacing_10"
                    android:layout_weight="3"
                    android:background="@null"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_choose_check_surface"
                    android:paddingTop="@dimen/spacing_10"
                    android:paddingBottom="@dimen/spacing_10"
                    android:singleLine="true"
                    binding:currentView="@{viewModel.patrolCount}"
                    android:text="@{viewModel.surface}"
                    binding:onClickCommand="@{viewModel.showSurfaceDialogClick}"
                    android:textColor="@color/black_333333"
                    android:textColorHint="@color/grey_999999"
                    android:textSize="@dimen/font_14" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>